dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
  #   nginx.ingress.kubernetes.io/auth-realm: "Protected Area"
  # namespace: kubernetes-dashboard
spec:
  ingressClassName: "nginx"
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
      - path: /news-app/
        pathType: Prefix
        backend:
          service:
            name: news-app-service
            port:
              number: 80
  - host: handyman.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: handyman-service
              port:
                number: 80
