dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: handyman-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: handyman-service
                port:
                  number: 80  # port the service listening
          - path: /news-app/
            pathType: Prefix
            backend:
              service:
                name: news-app-service
                port:
                  number: 80
